Made the energy chunks that are emitted to the air come from a random location towards the top of the energy container, and not always from the center top.
Added ability to sense the temperature of the steam emitted from the beaker when it is at or near boiling.
# 0.00.32 (71853) Jan 24, 2013
1/24/13 Deploy to dev for review.
Made temperature of ice in bucket equal the freezing point of water, since now the min temperature is limited to that value.
Removed freezing of the water.
Added a production rate and associated calculations for steam so that fast forward will work.
Made steam go away on reset.
Fixed issues with z-order and steam.
Changed implementation of steam coming from the beaker when water boils.
# 0.00.31 (71741) Jan 16, 2013
1/16/13 Deploying to dev for review by dev team.
Changed the background color.
Changed the thermometer to appear to fill up all the way to the top when the temperature of the measured object exceeds the thermometer's range.
Modified the thermometer to have one tick below the freezing point, one tick above the freezing point, and 10 increments between boiling and freezing.
Added flecks to the ice in an attempt to make it look more ice-like.
Added a representation for steam from the boiling water.
# 0.00.30 (71651) Jan 11, 2013
1/11/13 Deploying to dev for testing and review.
1st tab: Started adding representation for steam when water is at or near boiling point.
1st tab: Added a first-cut implementation of ice for when the beaker freezes.
1st tab: Added limits so that all thermal objects have a max and min temperature.  All min temperatures are 0 degrees C, max temperatures vary.
1st tab: Changed mapping function, made changes to energy chunk exchange algorithms.
1st tab: Fixed some issues with adding and removing of energy chunks when interacting with burner.  Part of making the boiling feature work.
# 0.00.29 (71440) Dec 26, 2012
12/26/12 Deploying for review by design team.